--- a/requirements.txt
+++ b/requirements.txt
@@ -17,15 +17,19 @@ github3.py==4.0.1
 greenlet==3.1.1
 httplib2==0.22.0
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.8
 MarkupSafe==3.0.2
 oauth2==1.9.0.post1
+packaging==24.2
+pluggy==1.5.0
 psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.10.1
 pyparsing==3.2.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 requests==2.32.3
 sbswebsite==0.0.23
